--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ python-multipart==0.0.6
 python-dotenv==1.0.0
 
 # AI and ML
-openai==1.3.7
+voyageai>=0.3.4
 sentence-transformers==2.2.2
 tiktoken==0.5.1
 
