--- a/requirements_simple.txt
+++ b/requirements_simple.txt
@@ -1,30 +1,23 @@
-# Core dependencies - Essential for the application
+# Web Framework
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
 python-dotenv>=1.0.0
 
 # AI and ML - Core functionality
-openai>=1.3.0
+voyageai>=0.3.4
 sentence-transformers>=2.2.0
 tiktoken>=0.5.0
 
-# Vector database
+# Vector Database
 pinecone-client>=2.2.0
+faiss-cpu>=1.7.0
 
-# Document processing - Simplified versions
-python-docx>=1.1.0
-Pillow>=10.0.0
-
-# Data processing
-numpy>=1.24.0
-pandas>=2.0.0
+# Document Processing (simplified)
+# PyMuPDF removed due to Windows compilation issues
+# Use alternative: pypdf2 or pdfplumber for PDF processing
 
 # Utilities
 requests>=2.31.0
-aiofiles>=23.0.0
-pydantic>=2.0.0
-
-# Development and testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0 
+numpy>=1.24.0
+pandas>=2.0.0 
