--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 # Core dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
+fastapi
+uvicorn
+python-multipart
+python-dotenv
 
 # AI and ML
-voyageai>=0.3.4
-groq>=0.4.2
-sentence-transformers==2.2.2
-tiktoken==0.5.1
+voyageai
+groq
+sentence-transformers
+tiktoken
 
 # Vector database
-pinecone-client==2.2.4
-faiss-cpu==1.7.4
+pinecone-client
+faiss-cpu
 
 # Document processing
-PyMuPDF==1.23.8
-pytesseract==0.3.10
-Pillow==10.1.0
-python-docx==1.1.0
+PyMuPDF
+pytesseract
+Pillow
+python-docx
 
 # Data processing
-numpy==1.24.3
-pandas==2.1.3
+numpy
+pandas
 
 # Utilities
-requests==2.31.0
-aiofiles==23.2.1
-pydantic==2.5.0
+requests
+aiofiles
+pydantic
 
 # Development and testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
+pytest
+pytest-asyncio
